add some minor tweaks to build.gradle to fix the build setup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,12 @@ android {
     buildFeatures {
         dataBinding true
     }
+
+    task wrapper(type: Wrapper){
+        gradleVersion = '7.2'
+    }
+
+    tasks.register("prepareKotlinBuildScriptModel"){}
 }
 
 dependencies {
