--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,13 @@ variables:
 build-docker-image:
   image: 0xacab.org:4567/leap/docker/debian:bullseye_amd64
   stage: build_image
-  image: docker
   services:
     - docker:dind
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   script:
     - echo "${CI_REGISTRY} | ${CI_REGISTRY_IMAGE} | ${IMAGE_TAG} | ${CI_COMMIT_REF_SLUG}"
-    - echo $CI_REGISTRY_PASSWORD | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
   when: manual
