--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ build-docker-image:
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:main
   script:
-    - echo "${CI_REGISTRY} | ${CI_REGISTRY_IMAGE} | ${IMAGE_TAG} | ${CI_COMMIT_REF_SLUG}"
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+    - echo "${CI_REGISTRY} | ${CI_REGISTRY_IMAGE} | ${IMAGE_TAG} | ${CI_COMMIT_REF_SLUG} | ${CI_REGISTRY_USER}"
+    - echo $CI_BUILD_TOKEN | docker login $CI_REGISTRY -u gitlab-ci-token --password-stdin
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
   when: manual
