--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,13 @@ android {
 
 dependencies {
 
-//    implementation 'androidx.databinding:databinding-common:7.1.2'
-    def nav_version = "2.5.0"
+    def ktx_version = "2.5.0"
 
     // Kotlin
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$ktx_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$ktx_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$ktx_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
@@ -56,9 +57,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'com.google.code.gson:gson:2.8.9'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // TODO: import from maven repo
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
 
     //tried this, still not sure we require this so commented for time being.
 /*    implementation("androidx.datastore:datastore-preferences:1.0.0")*/
