--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -42,6 +43,7 @@ android {
 
 dependencies {
 
+//    implementation 'androidx.databinding:databinding-common:7.1.2'
     def nav_version = "2.5.0"
 
     // Kotlin
