--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,13 +43,16 @@
                 <action android:name="android.net.VpnService" />
             </intent-filter>
         </service>
-        <receiver android:name=".vpn.OnBootReceiver"
-            android:enabled="true"
-            android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
+
+        <receiver
+            android:name=".vpn.OnBootReceiver"
             android:directBootAware="true"
-            android:exported="true">
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter android:priority="999">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <!-- This is required on HTC devices to support their "quickboot" feature -->
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
