--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.torwitharti"
+        applicationId "org.torproject.vpn"
         minSdk 21
         targetSdk 32
         versionCode 1
