Sign the build with the alpha signing key
Fixes: https://gitlab.torproject.org/tpo/applications/vpn/-/issues/73

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ assembleDebug:
   interruptible: true
   stage: build
   script:
+    - curl -s https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/download-secure-files/-/raw/main/installer | bash
     - ./gradlew clean assembleDebug --stacktrace
   when: always
   artifacts:
