--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,22 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+           storeFile file(System.getenv('ANDROID_KEY_STOREFILE'))
+           storePassword System.getenv('ANDROID_KEYSTORE_PASSWORD')
+           keyAlias System.getenv('ANDROID_KEY_ALIAS')
+           keyPassword System.getenv('ANDROID_KEYSTORE_PASSWORD')
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            if(System.getenv('CI_DEFAULT_BRANCH').compareTo('main') == 0 ) {
+              signingConfig signingConfigs.release
+            }
         }
     }
     compileOptions {
