--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,17 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     signingConfigs {
         release {
-           storeFile file(System.getenv('ANDROID_KEY_STOREFILE'))
-           storePassword System.getenv('ANDROID_KEYSTORE_PASSWORD')
-           keyAlias System.getenv('ANDROID_KEY_ALIAS')
-           keyPassword System.getenv('ANDROID_KEYSTORE_PASSWORD')
+            if (System.getenv('ANDROID_KEY_STOREFILE') != null &&
+                    System.getenv('ANDROID_KEYSTORE_PASSWORD') != null &&
+                    System.getenv('ANDROID_KEY_ALIAS') != null &&
+                    System.getenv('ANDROID_KEYSTORE_PASSWORD') != null) {
+                storeFile file(System.getenv('ANDROID_KEY_STOREFILE'))
+                storePassword System.getenv('ANDROID_KEYSTORE_PASSWORD')
+                keyAlias System.getenv('ANDROID_KEY_ALIAS')
+                keyPassword System.getenv('ANDROID_KEYSTORE_PASSWORD')
+            }
         }
     }
 
@@ -30,7 +34,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            if(System.getenv('CI_DEFAULT_BRANCH').compareTo('main') == 0 ) {
+            if('main'.equals(System.getenv('CI_DEFAULT_BRANCH'))) {
               signingConfig signingConfigs.release
             }
         }
