--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation 'org.torproject:onionmasq:0.1.0-local-release'
+    debugImplementation 'org.torproject:onionmasq:main-branch-debug'
+    releaseImplementation 'org.torproject:onionmasq:0.1.0-local-release'
     //tried this, still not sure we require this so commented for time being.
 /*    implementation("androidx.datastore:datastore-preferences:1.0.0")*/
 
