remove duplicated permission in AndroidManifest and replace package definition in AndroidManifest with namespace declaration in build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 android {
     compileSdk 33
+    namespace 'org.torproject.vpn'
 
     defaultConfig {
         applicationId "org.torproject.vpn"
