--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "org.torproject.vpn"
         minSdk 24
         targetSdk 33
-        versionCode 2
-        versionName "0.2.0"
+        versionCode 3
+        versionName "0.3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -102,7 +102,8 @@ dependencies {
     testImplementation 'tools.fastlane:screengrab:2.1.1'
 
     debugImplementation 'org.torproject:onionmasq:main-branch-debug'
-    releaseImplementation 'org.torproject:onionmasq:0.1.0-local-release'
+    // releaseImplementation 'org.torproject:onionmasq:0.1.0-local-release'
+    releaseImplementation 'org.torproject:onionmasq:0.3-local-release'
     //tried this, still not sure we require this so commented for time being.
 /*    implementation("androidx.datastore:datastore-preferences:1.0.0")*/
 
