--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation "com.google.android.material:material:1.10.0"
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'androidx.webkit:webkit:1.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.15.1'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android-core:2.9.1'
 
