--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,22 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".ui.quicksettings.TorVPNTileService"
+            android:label="@string/qs_title"
+            android:icon="@drawable/ic_launcher_foreground_qs"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
+            android:exported="true"
+            android:value="true">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.service.quicksettings.ACTIVE_TILE"
+                android:value="false" />
+        </service>
+
         <receiver
             android:name="org.torproject.vpn.vpn.OnBootReceiver"
             android:directBootAware="true"
