--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'androidx.webkit:webkit:1.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.15.1'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android-core:2.9.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:3.0-alpha-1'
 
     // Testing
     androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib"
