--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
 
         <service
             android:name=".ui.quicksettings.TorVPNTileService"
-            android:label="@string/qs_title"
+            android:label="@string/app_name"
             android:icon="@drawable/ic_launcher_foreground_qs"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
             android:exported="true"
