--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:launchMode="singleInstance">
         </activity>
         <activity-alias
-            android:name="org.torproject.vpn.ui.appearancesettings.model.LauncherDefault"
+            android:name="org.torproject.vpn.ui.generalsettings.model.LauncherDefault"
             android:enabled="true"
             android:icon="@mipmap/ic_launcher"
             android:roundIcon="@mipmap/ic_launcher_round"
@@ -64,10 +64,10 @@
         </activity-alias>
 
         <activity-alias
-            android:name="org.torproject.vpn.ui.appearancesettings.model.LauncherVariant1"
+            android:name="org.torproject.vpn.ui.generalsettings.model.LauncherVariant1"
             android:enabled="false"
-            android:icon="@mipmap/ic_launcher_monochrome"
-            android:roundIcon="@mipmap/ic_launcher_monochrome"
+            android:icon="@mipmap/ic_launcher"
+            android:roundIcon="@mipmap/ic_launcher"
             android:label="@string/app_name_variant_1"
             android:targetActivity="org.torproject.vpn.MainActivity"
             android:exported="true">
@@ -78,10 +78,10 @@
         </activity-alias>
 
         <activity-alias
-            android:name="org.torproject.vpn.ui.appearancesettings.model.LauncherVariant2"
+            android:name="org.torproject.vpn.ui.generalsettings.model.LauncherVariant2"
             android:enabled="false"
-            android:icon="@mipmap/ic_launcher_monochrome"
-            android:roundIcon="@mipmap/ic_launcher_monochrome"
+            android:icon="@mipmap/ic_launcher"
+            android:roundIcon="@mipmap/ic_launcher"
             android:label="@string/app_name_variant_2"
             android:targetActivity="org.torproject.vpn.MainActivity"
             android:exported="true">
@@ -92,67 +92,11 @@
         </activity-alias>
 
         <activity-alias
-            android:name="org.torproject.vpn.ui.appearancesettings.model.LauncherVariant3"
+            android:name="org.torproject.vpn.ui.generalsettings.model.LauncherVariant3"
             android:enabled="false"
-            android:icon="@mipmap/ic_launcher_monochrome"
-            android:roundIcon="@mipmap/ic_launcher_monochrome"
+            android:icon="@mipmap/ic_launcher"
+            android:roundIcon="@mipmap/ic_launcher"
             android:label="@string/app_name_variant_3"
-            android:targetActivity="org.torproject.vpn.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity-alias>
-
-        <activity-alias
-            android:name="org.torproject.vpn.ui.appearancesettings.model.LauncherVariant4"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher_monochrome"
-            android:roundIcon="@mipmap/ic_launcher_monochrome"
-            android:label="@string/app_name_variant_4"
-            android:targetActivity="org.torproject.vpn.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity-alias>
-
-        <activity-alias
-            android:name="org.torproject.vpn.ui.appearancesettings.model.LauncherVariant5"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher_monochrome"
-            android:roundIcon="@mipmap/ic_launcher_monochrome"
-            android:label="@string/app_name_variant_5"
-            android:targetActivity="org.torproject.vpn.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity-alias>
-
-        <activity-alias
-            android:name="org.torproject.vpn.ui.appearancesettings.model.LauncherVariant6"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher_monochrome"
-            android:roundIcon="@mipmap/ic_launcher_monochrome"
-            android:label="@string/app_name_variant_6"
-            android:targetActivity="org.torproject.vpn.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity-alias>
-
-        <activity-alias
-            android:name="org.torproject.vpn.ui.appearancesettings.model.LauncherVariant7"
-            android:enabled="false"
-            android:icon="@mipmap/ic_launcher_monochrome"
-            android:roundIcon="@mipmap/ic_launcher_monochrome"
-            android:label="@string/app_name_variant_7"
             android:targetActivity="org.torproject.vpn.MainActivity"
             android:exported="true">
             <intent-filter>
