don't fail lint  pipeline on string change

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,12 @@ android {
     }
 
     tasks.register("prepareKotlinBuildScriptModel"){}
+
+    lint {
+       disable 'MissingTranslation'
+    }
+
+
 }
 
 dependencies {
