--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     implementation 'androidx.webkit:webkit:1.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.15.1'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:3.0-alpha-1'
+    implementation 'com.netzarchitekten:IPtProxy:3.8.2'
+
 
     // Testing
     androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib"
