--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,8 +111,9 @@
             android:name="org.torproject.vpn.vpn.TorVpnService"
             android:exported="false"
             android:foregroundServiceType="systemExempted"
-            android:permission="android.permission.BIND_VPN_SERVICE">
-            <intent-filter>
+            android:permission="android.permission.BIND_VPN_SERVICE"
+            tools:ignore="ForegroundServicePermission">
+        <intent-filter>
                 <action android:name="android.net.VpnService" />
             </intent-filter>
         </service>
