renovate.json: Remove negative look-ahead as it appears to not work.
This should still work as the first rule disables specific packages, and rule 2
allows everything else.

I've set the second rule not to auto-merge, because that might produce
unexpected results.

--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
-
   "packageRules": [
     {
       "matchManagers": ["gradle", "gradle-wrapper"],
@@ -16,11 +15,8 @@
     },
     {
       "matchManagers": ["gradle", "gradle-wrapper"],
-      "matchPackagePatterns": [
-        "^(?!androidx\\.|org\\.jetbrains\\.kotlinx|gradle$|com\\.android\\.|org\\.jetbrains\\.kotlin\\.).*"
-      ],
       "enabled": true,
-      "automerge": true
+      "automerge": false
     },
     {
       "matchManagers": ["gitlabci", "dockerfile"],
