renovate.json: fix for incorrectly suggesting updates
The match patterns aren't working as expected.

I think this is because Renovate’s `matchPackagePatterns` matches package names,
which often include colons (:) in Maven-style identifiers (like
groupId:artifactId). The current regexes don’t account for that structure.

This updates the `matchPackagePatterns` to match the entire group/artifact
coordinate, including the colon.

--- a/renovate.json
+++ b/renovate.json
@@ -5,11 +5,11 @@
     {
       "matchManagers": ["gradle", "gradle-wrapper"],
       "matchPackagePatterns": [
-        "^androidx\\..*",
-        "^org\\.jetbrains\\.kotlinx",
+        "^androidx\\:",
+        "^org\\.jetbrains\\.kotlinx\\:",
         "^gradle$",
-        "^com\\.android\\..*",
-        "^org\\.jetbrains\\.kotlin\\..*"
+        "^com\\.android\\:",
+        "^org\\.jetbrains\\.kotlin\\:"
       ],
       "enabled": false
     },
