renovate: adjust regexp to catch both androidx cases.
We want to match both `androidx.core:foo` as well as `androidx:foo`. The
previous regexp would only match `androidx:`.

--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
     {
       "matchManagers": ["gradle", "gradle-wrapper"],
       "excludePackagePatterns": [
-        "^androidx\\:",
+        "^androidx([\\.:])",
         "^org\\.jetbrains\\.kotlinx\\:",
         "^gradle$",
         "^com\\.android\\:",
