Configure Dependency Scanning in `.gitlab-ci.yml`, creating this file if it does not already exist

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,76 +1,71 @@
+# You can override the included template(s) by including variable overrides
+# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
+# Secret Detection customization: https://docs.gitlab.com/user/application_security/secret_detection/pipeline/configure
+# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
+# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
+# Note that environment variables can be set in several places
+# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
-  - build_image
-  - build
-  - test
-  - publish
-
+- build_image
+- build
+- test
+- publish
 variables:
-  # When using dind, it's wise to use the overlayfs driver for
-  # improved performance.
   DOCKER_DRIVER: overlay
-
 build-docker-image:
   variables:
-    TAG: main # non-tag build will be unset, set to 'latest' in script
+    TAG: main
   stage: build_image
   image:
-    name: "containers.torproject.org/tpo/tpa/base-images/podman:bookworm"
+    name: containers.torproject.org/tpo/tpa/base-images/podman:bookworm
   script:
-    - export TMPDIR=$(pwd)/.tmp
-    - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - podman build -t ${CI_REGISTRY_IMAGE}:${TAG} .
-    - podman push ${CI_REGISTRY_IMAGE}:${TAG}
+  - export TMPDIR=$(pwd)/.tmp
+  - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  - podman build -t ${CI_REGISTRY_IMAGE}:${TAG} .
+  - podman push ${CI_REGISTRY_IMAGE}:${TAG}
   when: manual
-
-# Basic android and gradle stuff
-# Check linting
 lintDebug:
-  image : "containers.torproject.org/tpo/applications/vpn:main"
+  image: containers.torproject.org/tpo/applications/vpn:main
   interruptible: true
   stage: test
   when: always
   script:
-    - ./gradlew -Pci --console=plain :app:lintDebug -PbuildDir=lint
-
-# Make Project
+  - "./gradlew -Pci --console=plain :app:lintDebug -PbuildDir=lint"
 assembleDebug:
-  image : "containers.torproject.org/tpo/applications/vpn:main"
+  image: containers.torproject.org/tpo/applications/vpn:main
   interruptible: true
   stage: build
   script:
-    - curl -s https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/download-secure-files/-/raw/main/installer | bash
-    - ./gradlew clean assembleDebug --stacktrace
+  - curl -s https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/download-secure-files/-/raw/main/installer
+    | bash
+  - "./gradlew clean assembleDebug --stacktrace"
   when: always
   artifacts:
     paths:
-      - app/build/outputs/
-      - build.log
-
-# Publish apk
+    - app/build/outputs/
+    - build.log
 publish:
-  image: "containers.torproject.org/tpo/applications/vpn:main"
+  image: containers.torproject.org/tpo/applications/vpn:main
   stage: publish
-  # Only run this stage if one of the following rules is true
   rules:
-    # Run this job when a tag is created
-    - if: $CI_COMMIT_TAG
-      variables:
-        TAG: "${CI_COMMIT_TAG}"
-    # Run this job when commits are pushed or merged to the default branch
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      variables:
-        TAG: "main"
-  dependencies: 
-    - assembleDebug
+  - if: "$CI_COMMIT_TAG"
+    variables:
+      TAG: "${CI_COMMIT_TAG}"
+  - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH"
+    variables:
+      TAG: main
+  dependencies:
+  - assembleDebug
   script:
-    - 'echo "Pushing apk with tag: ${TAG} to gitlab package area"'
-    - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file app/build/outputs/apk/debug/app-debug.apk "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/org.torproject.vpn.testing/${TAG}/tor-vpn-debug.apk"'
-
-# Run all tests, if any fails, interrupt the pipeline(fail it)
+  - 'echo "Pushing apk with tag: ${TAG} to gitlab package area"'
+  - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file app/build/outputs/apk/debug/app-debug.apk
+    "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/org.torproject.vpn.testing/${TAG}/tor-vpn-debug.apk"'
 debugTests:
-  image : "containers.torproject.org/tpo/applications/vpn:main"
+  image: containers.torproject.org/tpo/applications/vpn:main
   interruptible: true
   stage: test
   when: always
   script:
-    - ./gradlew -Pci --console=plain :app:testDebug
+  - "./gradlew -Pci --console=plain :app:testDebug"
+include:
+- template: Security/Dependency-Scanning.gitlab-ci.yml
