feat: alternative app icons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:launchMode="singleInstance">
         </activity>
         <activity-alias
-            android:name="org.torproject.vpn.ui.generalsettings.model.LauncherDefault"
+            android:name="org.torproject.vpn.ui.iconsetting.model.LauncherDefault"
             android:enabled="true"
             android:icon="@mipmap/ic_launcher"
             android:roundIcon="@mipmap/ic_launcher_round"
@@ -64,11 +64,11 @@
         </activity-alias>
 
         <activity-alias
-            android:name="org.torproject.vpn.ui.generalsettings.model.LauncherVariant1"
+            android:name="org.torproject.vpn.ui.iconsetting.model.LauncherGarden"
             android:enabled="false"
-            android:icon="@mipmap/ic_launcher"
-            android:roundIcon="@mipmap/ic_launcher"
-            android:label="@string/app_name_variant_1"
+            android:icon="@mipmap/ic_launcher_garden"
+            android:roundIcon="@mipmap/ic_launcher_garden_round"
+            android:label="@string/app_name_garden"
             android:targetActivity="org.torproject.vpn.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -78,11 +78,11 @@
         </activity-alias>
 
         <activity-alias
-            android:name="org.torproject.vpn.ui.generalsettings.model.LauncherVariant2"
+            android:name="org.torproject.vpn.ui.iconsetting.model.LauncherWeather"
             android:enabled="false"
-            android:icon="@mipmap/ic_launcher"
-            android:roundIcon="@mipmap/ic_launcher"
-            android:label="@string/app_name_variant_2"
+            android:icon="@mipmap/ic_launcher_weather"
+            android:roundIcon="@mipmap/ic_launcher_weather_round"
+            android:label="@string/app_name_weather"
             android:targetActivity="org.torproject.vpn.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -92,11 +92,11 @@
         </activity-alias>
 
         <activity-alias
-            android:name="org.torproject.vpn.ui.generalsettings.model.LauncherVariant3"
+            android:name="org.torproject.vpn.ui.iconsetting.model.LauncherPingPong"
             android:enabled="false"
-            android:icon="@mipmap/ic_launcher"
-            android:roundIcon="@mipmap/ic_launcher"
-            android:label="@string/app_name_variant_3"
+            android:icon="@mipmap/ic_launcher_pingpong"
+            android:roundIcon="@mipmap/ic_launcher_pingpong_round"
+            android:label="@string/app_name_pingpong"
             android:targetActivity="org.torproject.vpn.MainActivity"
             android:exported="true">
             <intent-filter>
