Add environment variable to force the use of the local Maven repository despite the presence of a GitLab authentication token that allows access to the GitLab Maven repository

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ allprojects {
     }
 
     repositories {
-        if(properties.getProperty('gitLabPrivateToken') == null) {
+        if(properties.getProperty('gitLabPrivateToken') == null || System.getenv('ENFORCE_LOCAL_MAVEN') == '1') {
             mavenLocal()
         }
         maven {
