always bind VPNService before starting it as foreground service, workaround to fix raised foreground service security exceptions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation libs.bundles.retrofit
     implementation libs.bundles.ui
     implementation libs.bundles.kotlin
+    implementation libs.androidx.work.runtime.ktx
     kapt libs.bundles.tooling
 
     // Testing
